curtain images div

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     </div> <!-- #index-top -->
 
     <div id="index-bottom">
+      
+      <div id="curtain-images">
+        <h3>Curtain Styles</h3>
+        
+      </div>
+
       <div id="about">
         <h3>About</h3>
         <p id="about-desc">
