get rid of big vid container

--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
 <body id="body-home">
 
   <div id="bigvid-container">
-    <video autoplay loop id="bigvid-video" poster="assets/video/poster2.png">
-      <source src="assets/video/dark-blue_star_trails.webm" type="video/webm"/>
-      <source src="assets/video/dark-blue_star_trails2.mp4" type="video/mp4"/>
-    </video>
+    <div id="curtain-images">
+        <h3>Curtain Styles</h3>
+          <div class="container">
+            <div class="carousel_controls">
+              <a href="#" id="previous_frame">&lt;</a>
+              <a href="#" id="next_frame">&gt;</a>
+            </div>
+
+            <div class="carousel">
+              <ul class="frames">
+
+              <li>
+                <h2>Bedroom Drapes</h2>
+                <img src="http://f.cl.ly/items/3e332b2e0B3d311a1U1X/wargames.jpg" />
+              </li>
+              </ul>
+            </div>
+          </div>
+
+      </div>
   </div>
 
       <div id="navbar">
@@ -42,11 +58,6 @@
 
     <div id="index-bottom">
       
-      <div id="curtain-images">
-        <h3>Curtain Styles</h3>
-        
-      </div>
-
       <div id="about">
         <h3>About</h3>
         <p id="about-desc">
