big video styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
   <title>dkdrapery | custom drapes</title>
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/style.css?v=1.1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="assets/images/star2.jpg"/>
+  <link rel="shortcut icon" type="image/png" href=""/>
 </head>
 <body id="body-home">
 
   <div id="bigvid-container">
-    <div id="curtain-images">
+    <div id="curtain-images-container">
         <h3>Curtain Styles</h3>
           <div class="container">
             <div class="carousel_controls">
@@ -21,7 +21,7 @@
 
               <li>
                 <h2>Bedroom Drapes</h2>
-                <img src="http://f.cl.ly/items/3e332b2e0B3d311a1U1X/wargames.jpg" />
+                <img src="assets/images/1.bedroom_drapes.jpg" />
               </li>
               </ul>
             </div>
