delete sass cache

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                   <h2>Bedroom Drapes</h2>
                   <img src="assets/images/1.bedroom_drapes.jpg" />
                 </li>
+                <li>
+                  <h2>Bead Embrodiery Drapes</h2>
+                  <img src="assets/images/bead_embrodiery_drapes.JPG" />
+                </li>
+                <li>
+                  <h2>Cornice with Panel</h2>
+                  <img src="assets/images/cornice_with_panel.jpg" />
+                </li>
               </ul>
             </div>
           </div>
