update of images

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <div id="index-nonvid">
     <div id="index-top">
 
-      <div id="index-desc">
-      <h3>Curtain Styles</h3>
+      <div id="curtain-images">
+        <h3>Curtain Styles</h3>
           <div class="container">
             <div class="carousel_controls">
               <a href="#" id="previous_frame">&lt;</a>
@@ -44,14 +44,14 @@
                   <h2>Bedroom Drapes</h2>
                   <img src="assets/images/1.bedroom_drapes.jpg" />
                 </li>
-                <li>
+                <!-- <li>
                   <h2>Bead Embrodiery Drapes</h2>
                   <img src="assets/images/bead_embrodiery_drapes.JPG" />
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                   <h2>Cornice with Panel</h2>
                   <img src="assets/images/cornice_with_panel.jpg" />
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
