back to original

--- a/index.html
+++ b/index.html
@@ -28,35 +28,13 @@
 
 
   <div id="index-nonvid">
+    
     <div id="index-top">
 
-      <div id="curtain-images">
-        <h3>Curtain Styles</h3>
-          <div class="container">
-            <div class="carousel_controls">
-              <a href="#" id="previous_frame">&lt;</a>
-              <a href="#" id="next_frame">&gt;</a>
-            </div>
-
-            <div class="carousel">
-              <ul class="frames">
-                <li>
-                  <h2>Bedroom Drapes</h2>
-                  <img src="assets/images/1.bedroom_drapes.jpg" />
-                </li>
-                <!-- <li>
-                  <h2>Bead Embrodiery Drapes</h2>
-                  <img src="assets/images/bead_embrodiery_drapes.JPG" />
-                </li> -->
-                <!-- <li>
-                  <h2>Cornice with Panel</h2>
-                  <img src="assets/images/cornice_with_panel.jpg" />
-                </li> -->
-              </ul>
-            </div>
-          </div>
+      <div id="index-desc">
         <h2>
-          
+          Blah, blah, blah <span class="ital">Blah</span>.<br>
+          blah, blah, blah, blah <span class="ital">blah</span>.
         </h2>
         <a href="#about" id="arrow-down" class="nav-link"><span class="fa fa-arrow-circle-down fa-2x"></span></a>
       </div> <!-- #index-desc -->
