--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 <body id="body-home">
 
-  
-
-  <div id="curtain-container">
-    <div id="woohoo"></div>
+  <div id="bigvid-container">
+    <video autoplay loop id="bigvid-video" poster="assets/video/poster2.png">
+      <source src="assets/video/curtain-images.webm" type="video/webm"/>
+      <source src="assets/video/curtain-images.mp4" type="video/mp4"/>
+    </video>
   </div>
-
+  
       <div id="navbar">
         <h1 id="navbar-initials"><a href="#" class="nav-link">dkdrapery</a></h1>
 
