--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
       <div id="index-desc">
         <h2>
-          Blah, blah, blah <span class="ital">Blah</span>.<br>
-          blah, blah, blah, blah <span class="ital">blah</span>.
+          <span class="ital">Curtain Styles</span>
         </h2>
         <a href="#about" id="arrow-down" class="nav-link"><span class="fa fa-arrow-circle-down fa-2x"></span></a>
       </div> <!-- #index-desc -->
