rough draft of video

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css?v=1.1">
 </head>
 <body id="body-home">
+  
+  <div id="curtain-text">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3>Curtain Styles</h3>
+  </div>
 
   <div id="bigvid-container">
     <video autoplay loop id="bigvid-video" poster="assets/video/poster2.png">
@@ -33,9 +42,9 @@
     <div id="index-top">
 
       <div id="index-desc">
-        <h2>
+        <!-- <h2>
           <span class="ital">Curtain Styles</span>
-        </h2>
+        </h2> -->
         <a href="#about" id="arrow-down" class="nav-link"><span class="fa fa-arrow-circle-down fa-2x"></span></a>
       </div> <!-- #index-desc -->
 
