--- a/index.html
+++ b/index.html
@@ -7,35 +7,43 @@
 </head>
 <body id="body-home">
   
-  <div id="curtain-text">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h3>Curtain Styles</h3>
-  </div>
-
-  <div id="bigvid-container">
-    <video autoplay loop id="bigvid-video" poster="assets/video/bedroom_drapes.jpg">
-      <source src="assets/video/curtain-images.webm" type="video/webm"/>
-      <source src="assets/video/curtain-images.mp4" type="video/mp4"/>
-    </video>
-  </div>
+  <div id="video-container">
   
-      <div id="navbar">
-        <h1 id="navbar-initials"><a href="#" class="nav-link">dkdrapery</a></h1>
+    <div id="navbar">
+      <h1 id="navbar-initials"><a href="#" class="nav-link">dkdrapery</a></h1>
 
-        <span class="fa fa-bars fa-lg" id="menu-icon"></span>
+      <span class="fa fa-bars fa-lg" id="menu-icon"></span>
 
-        <ul id="navbar-options">
-          <li><a href="#footer" class="nav-link">Text/Phone# 209-613-7843</a></li>
-          <li><a href="#about" class="nav-link">ABOUT</a></li>
-          <li><a href="#work" class="nav-link">STYLES</a></li>
-          <li><a href="#footer" class="nav-link">CONTACT</a></li>
-        </ul>
+      <ul id="navbar-options">
+        <li><a href="#footer" class="nav-link">TEXT/PHONE: 209-613-7843</a></li>
+        <li><a href="#about" class="nav-link">ABOUT</a></li>
+        <li><a href="#work" class="nav-link">STYLES</a></li>
+        <li><a href="#footer" class="nav-link">CONTACT</a></li>
+      </ul>
 
-      </div> <!-- #navbar -->
+    </div> <!-- #navbar -->
+
+    <div id="curtain-text">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h3>Curtain Styles</h3>
+    </div>
+
+    <div id="bigvid-container">
+      <div>
+        <video autoplay loop id="bigvid-video" poster="assets/video/bedroom_drapes.jpg">
+          <source src="assets/video/curtain-images.webm" type="video/webm"/>
+          <source src="assets/video/curtain-images.mp4" type="video/mp4"/>
+        </video>
+      </div>
+    </div>
+
+  </div> <!-- #video-container -->
 
 
   <div id="index-nonvid">
@@ -124,13 +132,13 @@
         <div id="footer-icons">
           <h4 id="footer-contact">Get in touch</h4>
 
-          <a href="https://github.com/LoRyder1">
+          <a href="https://www.facebook.com/DK-Drapery-Curtains-1392298614350010/">
             <span class="fa fa-facebook-square fa-3x"></span>
           </a>
-          <a href="https://twitter.com/LoRyderr">
+          <a href="https://twitter.com/hashtag/curtains">
             <span class="fa fa-twitter-square fa-3x"></span>
           </a>
-          <a href="https://www.linkedin.com/in/lspnag">
+          <a href="tel://1-209-613-7843">
             <span class="fa fa-phone-square fa-3x"></span>
           </a>
           <a href="mailto:batthdavinder@gmail.com">
