--- a/index.html
+++ b/index.html
@@ -16,23 +16,13 @@
 
       <ul id="navbar-options">
         <li><a href="#footer" class="nav-link">TEXT/PHONE: 209-613-7843</a></li>
+        <li><a href="#footer" class="nav-link">EMAIL: battdavinder@gmail.com</a></li>
         <li><a href="#about" class="nav-link">ABOUT</a></li>
         <li><a href="#work" class="nav-link">STYLES</a></li>
         <li><a href="#footer" class="nav-link">CONTACT</a></li>
       </ul>
 
     </div> <!-- #navbar -->
-
-    <div id="curtain-text">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <h3>Curtain Styles</h3>
-    </div>
 
     <div id="bigvid-container">
       <div>
@@ -51,9 +41,10 @@
     <div id="index-top">
 
       <div id="index-desc">
-        <!-- <h2>
-          <span class="ital">Curtain Styles</span>
-        </h2> -->
+          <h2>
+            Hi, I'm <span class="ital">Davinder</span>.<br>
+            I make custom curtains and drapes.
+          </h2>
         <a href="#about" id="arrow-down" class="nav-link"><span class="fa fa-arrow-circle-down fa-2x"></span></a>
       </div> <!-- #index-desc -->
 
