--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         <h3>About</h3>
 
         <p id="about-desc">
-          We specialize in custom curtain design and will work closely with you to develop a product that meets your style and budget. <br>
-          Our quotes usually end up being a fraction 50-60% off of the price that would be paid when dealing with department stores.
+          We specialize in custom curtain design. <br> 
+          Work closely with you to develop a product that meets your style and budget. <br>
+          Our quotes end up being a fraction(50-60%) of the price when dealing with department stores. <br>
+          Based in Modesto, CA.
         </p>
         
       </div> <!-- #about -->
