--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="bigvid-container">
       <div>
-        <video autoplay loop id="bigvid-video" poster="assets/video/bedroom_drapes.jpg">
+        <video autoplay loop id="bigvid-video" poster="">
           <source src="assets/video/curtain-images.webm" type="video/webm"/>
           <source src="assets/video/curtain-images.mp4" type="video/mp4"/>
         </video>
