fix email spelling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <ul id="navbar-options">
         <li><a href="#footer" class="nav-link">TEXT/PHONE: 209-613-7843</a></li>
-        <li><a href="#footer" class="nav-link">EMAIL: battdavinder@gmail.com</a></li>
+        <li><a href="#footer" class="nav-link">EMAIL: batthdavinder@gmail.com</a></li>
         <li><a href="#about" class="nav-link">ABOUT</a></li>
         <li><a href="#work" class="nav-link">STYLES</a></li>
         <li><a href="#footer" class="nav-link">CONTACT</a></li>
